# -----------------------------------------------
# !!! THIS FILE WAS GENERATED BY TYPE-GRAPHQL !!!
# !!!   DO NOT MODIFY THIS FILE BY YOURSELF   !!!
# -----------------------------------------------

type Assignment {
  name: String!
}

type Degree {
  name: String!
}

type Grade {
  assignment: Assignment!
  result: Float!
}

"""The Instructor model"""
type Instructor {
  dob: String!
  email: String!
  firstName: String!
  id: ID!
  lastName: String!
  middleName: String!
  officeLocation: Boolean!
  prefix: String!
  title: String!
}

type LoginResponse {
  accessToken: String!
}

"""The Module model"""
type Module {
  assignments: Assignment!
  duration: Float!
  enrolled: Float!
  hasAssignment: Boolean!
  id: ID!
  instructor: Instructor!
  intro: String!
  keywords: [String!]!
  moduleName: String!
  moduleNumber: Float!
  numSlides: Float!
  objective: String!
  rating: [Int!]!
}

type Mutation {
  login(email: String!, password: String!): LoginResponse!
  register(email: String!, firstName: String!, group: String!, lastName: String!, password: String!, passwordConf: String!): Boolean!
  verify(token: String!): Boolean!
}

type PlanOfStudy {
  adviser: User!
  degree: Degree!
  grades: Grade!
  id: ID!
  modules: Module!
  student: User!
}

type Query {
  getPlan(studentID: String!): PlanOfStudy
  getPlans: [PlanOfStudy!]!
  getUser(id: String!): User!
  getUsers: [User!]!
}

"""The User model"""
type User {
  active: Boolean!
  dob: String!
  email: String!
  firstName: String!
  group: String!
  id: ID!
  lastName: String!
  middleName: String!
  planOfStudy: PlanOfStudy!
  prefix: String!
}
